Update colab url and git clone url to match pyAMPACT

--- a/pyAMPACT_Quick_Ref_Colab.ipynb
+++ b/pyAMPACT_Quick_Ref_Colab.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "<h1>pyAMPACT Quick Reference</h1>\n",
     "\n",
-    "This notebook gives a quick demonstration of how to run some of pyAMPACT's primary functions and save the generated tables to csv files. Feel free to use this notebook as a way to create csv files of the results and save them locally. It's meant to be used on colab [here](https://colab.research.google.com/github/alexandermorgan/AMPACT/blob/main/AMPACT_Quick_Ref_Colab.ipynb#scrollTo=401a7ec7-e8ca-4944-ab81-8b9083cae543).\n",
+    "This notebook gives a quick demonstration of how to run some of pyAMPACT's primary functions and save the generated tables to csv files. Feel free to use this notebook as a way to create csv files of the results and save them locally. It's meant to be used on colab [here](https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/pyAMPACT_Quick_Ref_Colab.ipynb).\n",
     "\n",
     "<h2>Import a the repo and create a Score object</h2>\n",
     "\n",
@@ -395,7 +395,7 @@
     }
    ],
    "source": [
-    "!git clone https://github.com/alexandermorgan/AMPACT.git\n",
+    "!git clone https://github.com/jcdevaney/pyAMPACT.git\n",
     "%cd /content/AMPACT/\n",
     "import pandas as pd\n",
     "from script import Score\n",
