--- a/AMPACT_Quick_Ref_Colab.ipynb
+++ b/AMPACT_Quick_Ref_Colab.ipynb
@@ -11,13 +11,13 @@
     "tags": []
    },
    "source": [
-    "<h1>AMPACT Quick Reference</h1>\n",
+    "<h1>pyAMPACT Quick Reference</h1>\n",
     "\n",
-    "This notebook gives a quick demonstration of how to run some of AMPACT's primary functions and save the generated tables to csv files. Feel free to use this notebook as a way to create csv files of the results and save them locally. It's meant to be used on colab [here](https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/pyAMPACT_Quick_Ref_Colab.ipynb).\n",
+    "This notebook gives a quick demonstration of how to run some of pyAMPACT's primary functions and save the generated tables to csv files. Feel free to use this notebook as a way to create csv files of the results and save them locally. It's meant to be used on colab [here](https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/pyAMPACT_Quick_Ref_Colab.ipynb).\n",
     "\n",
     "<h2>Import a the repo and create a Score object</h2>\n",
     "\n",
-    "You can import any type of symoblic notation file that music21 imports (kern, xml, mei, midi, abc, etc.). If you clone the repo your computer, you can import pieces locally from your computer. It's also convenient to import a piece from a url. Let's import one of the pieces from the TAVERN database and store the Score object to a variable called \"piece\". Note that if you're getting a file from github, make sure you use the \"raw\" link."
+    "You can import any type of symoblic notation file that music21 imports (kern, xml, mei, midi, abc, etc.). If you clone the repo on your computer, you can import pieces locally from your computer. It's also convenient to import a piece from a url. Let's import one of the pieces from the TAVERN database and store the Score object to a variable called \"piece\"."
    ]
   },
   {
@@ -396,10 +396,9 @@
    ],
    "source": [
     "!git clone https://github.com/jcdevaney/pyAMPACT.git\n",
-    "%cd /content/AMPACT/\n",
+    "%cd /content/pyAMPACT/\n",
     "import pandas as pd\n",
-    "from script import Score\n",
-    "print('-> Successfully imported Score class.')\n",
+    "from symbolic import Score\n",
     "piece = Score('https://raw.githubusercontent.com/alexandermorgan/TAVERN/master/Mozart/K179/Stripped/M179_00_02b_b.krn')\n",
     "print(f'-> Successfully imported {piece.metadata[\"Title\"]} by {piece.metadata[\"Composer\"]}.\\n')\n",
     "pianoRoll = piece.pianoRoll()\n",
@@ -686,7 +685,7 @@
    "id": "2ce96d48-11d0-417e-a9f2-6ea21b022721",
    "metadata": {},
    "source": [
-    "The `.mask()` method accepts lots of variables. Here's a list of them and their defaults:\n",
+    "The `.mask()` method accepts lots of parameters. Here's a list of them and their defaults:\n",
     "winms=100,         # together with sample_rate, determines how many pitch (y-axis) bins there are\n",
     "sample_rate=2000,  # together with winms, determines how many pitch (y-axis) bins there are\n",
     "num_harmonics=1,   # how many harmonics to include, remember that 1 is the pitch itself\n",
@@ -1087,7 +1086,7 @@
    ],
    "source": [
     "piece.mask().to_csv('./output_files/Mozart_piece_mask.csv', header=False, index=False)\n",
-    "print(\"Nothing is printed by this function, so you just have to look at the file path you gave it to see the file there when it's done.\")"
+    "print(\"Nothing is printed by this function, so find the file at the path you gave. The default location is in the output_files directory.\")"
    ]
   },
   {
@@ -1115,7 +1114,7 @@
    "id": "6c2bb47e-05cd-4d8a-bc5a-7b971b9c1e81",
    "metadata": {},
    "source": [
-    "You can also pass the `filler` parameter if you want to apply special fill logic. The best explanation for this is the doc string of any of the `.functions`, `.harmKeys`, or `.harmonies` methods. Let's look at one:"
+    "You can also pass the `filler` parameter if you want to apply special fill logic. The best explanation for this is the doc string of any of the `.functions`, `.harmKeys`, `.harmonies`, `.chords`, or `.cdata` methods. Let's look at one:"
    ]
   },
   {
@@ -1126,42 +1125,6 @@
    "outputs": [],
    "source": [
     "print(piece.functions.__doc__)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8510960e-7fda-4108-8a34-2d609cffc54a",
-   "metadata": {},
-   "source": [
-    "If instead you want to get the key, function, or harmony analysis from your score and align it with either the `.pianoRoll()` or `.mask()` that's easy to do. To get them in the same table, you can add whichever of `keys=True`, `functions=True`, and/or `harmonies=True` that you want. For example, to add all three to the pianoRoll, you can do this:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0cc21bf-e8ff-40c9-98f2-04334e6c4312",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "piece.pianoRoll(keys=True, functions=True, harmonies=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d6e5f7a8-8d81-45de-b053-2082eb1aae6a",
-   "metadata": {},
-   "source": [
-    "And likewise for the mask:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d45e801a-9d04-462d-8d3b-1ff12a1f4dbf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "piece.mask(keys=True, functions=True, harmonies=True)"
    ]
   }
  ],
