Update quick ref notebook

--- a/pyAMPACT_Quick_Ref_Colab.ipynb
+++ b/pyAMPACT_Quick_Ref_Colab.ipynb
@@ -396,10 +396,9 @@
    ],
    "source": [
     "!git clone https://github.com/jcdevaney/pyAMPACT.git\n",
-    "%cd /content/AMPACT/\n",
+    "%cd /content/pyAMPACT/\n",
     "import pandas as pd\n",
     "from script import Score\n",
-    "print('-> Successfully imported Score class.')\n",
     "piece = Score('https://raw.githubusercontent.com/alexandermorgan/TAVERN/master/Mozart/K179/Stripped/M179_00_02b_b.krn')\n",
     "print(f'-> Successfully imported {piece.metadata[\"Title\"]} by {piece.metadata[\"Composer\"]}.\\n')\n",
     "pianoRoll = piece.pianoRoll()\n",
@@ -1123,7 +1122,7 @@
    ],
    "source": [
     "piece.mask().to_csv('./output_files/Mozart_piece_mask.csv', header=False, index=False)\n",
-    "print(\"Nothing is printed by this function, so you just have to look at the file path you gave it to see the file there when it's done.\")"
+    "print(\"Nothing is printed by this function, so look at the file path you gave it to see the file there when it's done.\")"
    ]
   },
   {
@@ -1181,7 +1180,7 @@
    "id": "6c2bb47e-05cd-4d8a-bc5a-7b971b9c1e81",
    "metadata": {},
    "source": [
-    "You can also pass the `filler` parameter if you want to apply special fill logic. The best explanation for this is the doc string of any of the `.functions`, `.harmKeys`, or `.harmonies` methods. Let's look at one:"
+    "You can also pass the `filler` parameter if you want to apply special fill logic. The best explanation for this is the doc string of any of the `.functions`, `.harmKeys`, `.harmonies`, `.chords`, or `.cdata` methods. Let's look at one:"
    ]
   },
   {
