Fix import statement in notebook

--- a/pyAMPACT_Quick_Ref_Colab.ipynb
+++ b/pyAMPACT_Quick_Ref_Colab.ipynb
@@ -398,7 +398,7 @@
     "!git clone https://github.com/jcdevaney/pyAMPACT.git\n",
     "%cd /content/pyAMPACT/\n",
     "import pandas as pd\n",
-    "from script import Score\n",
+    "from symbolic import Score\n",
     "piece = Score('https://raw.githubusercontent.com/alexandermorgan/TAVERN/master/Mozart/K179/Stripped/M179_00_02b_b.krn')\n",
     "print(f'-> Successfully imported {piece.metadata[\"Title\"]} by {piece.metadata[\"Composer\"]}.\\n')\n",
     "pianoRoll = piece.pianoRoll()\n",
