More small updates to notebooks

--- a/README.ipynb
+++ b/README.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "# pyAMPACT Repository Usage Guide\n",
     "\n",
-    "An interactive [colab version](https://githubtocolab.com/alexandermorgan/AMPACT/blob/main/README.ipynb) of this notebook is also available.\n",
+    "An interactive [colab version](https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/README.ipynb) of this notebook is also available.\n",
     "All examples below require the following import, so be sure to run the following cell:"
    ]
   },
@@ -2022,7 +2022,7 @@
     }
    ],
    "source": [
-    "piece.nmats()['Part_2']"
+    "piece.nmats()['Part-2']"
    ]
   },
   {
@@ -2064,7 +2064,7 @@
    "id": "946ba516-45d8-4e0d-a166-2bbeef1a82cd",
    "metadata": {},
    "source": [
-    "If a .krn file has a **harm spine, we can similarly retrieve the analyzed harmonies with `piece.harmonies()`. We can also get the prevailing key analysis from the **harm spine (if there is one) with `piece.harmKeys()`. The default return type of functions, harmonies, and harmKeys is a numpy array, but let's use `output='series'` to keep this data as pandas series so that we can concatenate them into a table. This is a good opportunity to see how we can use some basic pandas methods to join our various tables on their musical time axis. We'll also forward-fill the observations, since the prevailing-key information is very sparse. This time let's use `.tail(10)` to look at the last 10 rows in the table."
+    "If a .krn file has a **harm spine, we can similarly retrieve the analyzed harmonies with `piece.harm()`. We can also get the prevailing key analysis from the **harm spine (if there is one) with `piece.harmKeys()`. The default return type of functions, harmonies, and harmKeys is a numpy array, but let's use `output='series'` to keep this data as pandas series so that we can concatenate them into a table. This is a good opportunity to see how we can use some basic pandas methods to join our various tables on their musical time axis. We'll also forward-fill the observations, since the prevailing-key information is very sparse. This time let's use `.tail(10)` to look at the last 10 rows in the table."
    ]
   },
   {
@@ -2193,7 +2193,7 @@
    "source": [
     "piece = Score('./test_files/cDataTest.krn')\n",
     "functions = piece.functions(output='series')\n",
-    "harmonies = piece.harmonies(output='series')\n",
+    "harmonies = piece.harm(output='series')\n",
     "keys = piece.harmKeys(output='series')\n",
     "df = pd.concat([keys, harmonies, functions], axis=1)\n",
     "df.columns = ['Key', 'Harmony', 'Function']\n",
@@ -2451,7 +2451,7 @@
    "id": "d2a7321e-f44a-404c-8c9a-eb23bca41117",
    "metadata": {},
    "source": [
-    "As with the `.functions()`, `.chords()`, `.harmonies()`, and `.harmKeys()` methods, `.cdata()` can also take `snap_to`, `filler`, and `output` arguments. See the doc string of any of these methods to learn more:"
+    "As with the `.functions()`, `.chords()`, `.harm()`, and `.harmKeys()` methods, `.cdata()` can also take `snap_to`, `filler`, and `output` arguments. See the doc string of any of these methods to learn more:"
    ]
   },
   {
