--- a/pyAMPACT_Quick_Ref_Colab.ipynb
+++ b/pyAMPACT_Quick_Ref_Colab.ipynb
@@ -400,7 +400,7 @@
     "import pandas as pd\n",
     "from symbolic import Score\n",
     "piece = Score('https://raw.githubusercontent.com/alexandermorgan/TAVERN/master/Mozart/K179/Stripped/M179_00_02b_b.krn')\n",
-    "print(f'-> Successfully imported {piece.metadata[\"Title\"]} by {piece.metadata[\"Composer\"]}.\\n')\n",
+    "print(f'-> Successfully imported {piece.metadata[\"title\"]} by {piece.metadata[\"composer\"]}.\\n')\n",
     "pianoRoll = piece.pianoRoll()\n",
     "pianoRoll"
    ]
@@ -713,7 +713,7 @@
    ],
    "source": [
     "nmat_dict = piece.nmats()\n",
-    "nmat_dict['Part_1']"
+    "nmat_dict['Part-1']"
    ]
   },
   {
@@ -1172,7 +1172,7 @@
    "source": [
     "mask = piece.mask()\n",
     "# get the harmonies in the same shape as the mask columns:\n",
-    "piece.harmonies(snap_to=mask)"
+    "piece.harm(snap_to=mask)"
    ]
   },
   {
@@ -1180,7 +1180,7 @@
    "id": "6c2bb47e-05cd-4d8a-bc5a-7b971b9c1e81",
    "metadata": {},
    "source": [
-    "You can also pass the `filler` parameter if you want to apply special fill logic. The best explanation for this is the doc string of any of the `.functions`, `.harmKeys`, `.harmonies`, `.chords`, or `.cdata` methods. Let's look at one:"
+    "You can also pass the `filler` parameter if you want to apply special fill logic. The best explanation for this is the doc string of any of the `.functions`, `.harmKeys`, `.harm`, `.chords`, or `.cdata` methods. Let's look at one:"
    ]
   },
   {
