--- a/README.ipynb
+++ b/README.ipynb
@@ -79,7 +79,7 @@
    ],
    "source": [
     "piece = Score('https://raw.githubusercontent.com/alexandermorgan/TAVERN/master/Mozart/K179/Stripped/M179_00_02b_b.krn')\n",
-    "print(f'-> Successfully imported {piece.metadata[\"Title\"]} by {piece.metadata[\"Composer\"]}.\\n')"
+    "print(f'-> Successfully imported {piece.metadata[\"title\"]} by {piece.metadata[\"composer\"]}.\\n')"
    ]
   },
   {
