--- a/README.ipynb
+++ b/README.ipynb
@@ -44,7 +44,7 @@
     "!git clone https://github.com/jcdevaney/pyAMPACT.git\n",
     "%cd /content/pyAMPACT/\n",
     "import pandas as pd\n",
-    "from symbolic import Score\n",
+    "from symbolic import *\n",
     "print('-> Successfully imported Score class.')"
    ]
   },
@@ -2475,7 +2475,7 @@
     "\n",
     "<h3>Import a json file</h3>\n",
     "\n",
-    "Provided your json file is in the right format, run `.fromJSON(path_to_json_file)` passing in the path to the json file. For demonstration purposes, there's a small json file with a small sample of dummy data in the `test_files` directory called cdataCompact.json. The outermost keys should be in seconds with decimal places allowed (i.e. 123.5 for two minutes and three and a half seconds). We use these as the index values for the rows. The 2nd-level keys (of the nested objects) get used as the column names of the resultant table. Let's use an excerpt from a Mozart piece in the TAVERN repository for these next few examples, and see that json file as a table."
+    "Provided your json file is in the right format, run `fromJSON(path_to_json_file)` passing in the path to the json file. For demonstration purposes, there's a small json file with a small sample of dummy data in the `test_files` directory called cdataCompact.json. The outermost keys should be in seconds with decimal places allowed (i.e. 123.5 for two minutes and three and a half seconds). We use these as the index values for the rows. The 2nd-level keys (of the nested objects) get used as the column names of the resultant table. Let's use an excerpt from a Mozart piece in the TAVERN repository for these next few examples, and see that json file as a table."
    ]
   },
   {
@@ -2822,7 +2822,7 @@
    ],
    "source": [
     "piece = Score(score_path='https://raw.githubusercontent.com/alexandermorgan/TAVERN/master/Mozart/K353/Stripped/M353_04_01a_b.krn')\n",
-    "piece.fromJSON('./test_files/cdataCompact.json')"
+    "fromJSON('./test_files/cdataCompact.json')"
    ]
   },
   {
