Finish file_converter

--- a/File_Converter.ipynb
+++ b/File_Converter.ipynb
@@ -7,10 +7,16 @@
    "source": [
     "<h1 style='text-align: center;'>File Converter</h1>\n",
     "<h2 style='text-align: center;'>Convert a score in symbolic notation to an MEI or kern score</h2>\n",
-    "<a href='https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/File_Converter.ipynb'><h2 style='text-align: center;'>Link to interactive colab file conversion tool</h2></a>\n",
-    "\n",
+    "<a href='https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/File_Converter.ipynb'><h2 style='text-align: center;'>Link to interactive colab file conversion tool</h2></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e715140d-e8a6-4a4d-baf4-071fbf1501c8",
+   "metadata": {},
+   "source": [
     "`1.` Click on the folder button on the left ⬅️ 📁\\\n",
-    "`2.` Add the symbolic notation files (no images or pdfs) you want to convert to the added_files folder then run the next cell"
+    "`2.` Add the symbolic notation files (no images or pdfs) you want to convert to the `pyAMPACT/added_files` folder then run the next cell"
    ]
   },
   {
@@ -95,7 +101,7 @@
    "id": "df845024-bd1c-4ec2-bf9e-f3d797230d46",
    "metadata": {},
    "source": [
-    "`4` Download your converted files from the output_files folder on the left ⬅️ 📁\\\n",
+    "`4` Download your converted files from the `pyAMPACT/output_files` folder on the left ⬅️ 📁\\\n",
     "They will have the same filename but with a `.krn` or `.mei.xml` extension."
    ]
   }
