Get Example_Script.ipynb working

--- a/Example_Script.ipynb
+++ b/Example_Script.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4c5ed9bd-dd5b-406f-89a6-f40cf7bbce41",
+   "metadata": {},
+   "source": [
+    "<h1 style='text-align: center'>Example Script</h1>\n",
+    "<a href='https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/Example_Script.ipynb'>\n",
+    "    <h2 style='text-align: center'>Link to interactive colab notebook</h2>\n",
+    "</a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "a1509e57-aa7e-4c0a-99c3-26e02c565a6e",
@@ -22,6 +33,16 @@
    "source": [
     "!git clone https://github.com/jcdevaney/pyAMPACT.git\n",
     "%cd /content/pyAMPACT/\n",
+    "!pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a52b0d57-dfe9-4b16-9f96-14a592a4ff43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%run exampleScript.py"
    ]
   }
