update requirements and others

--- a/README.ipynb
+++ b/README.ipynb
@@ -11,9 +11,9 @@
     "tags": []
    },
    "source": [
-    "# AMPACT Repository Usage Guide\n",
+    "# pyAMPACT Repository Usage Guide\n",
     "\n",
-    "An interactive [colab version](https://githubtocolab.com/alexandermorgan/AMPACT/blob/main/README.ipynb) of this notebook is also available.\n",
+    "An interactive [colab version](https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/README.ipynb) of this notebook is also available.\n",
     "All examples below require the following import, so be sure to run the following cell:"
    ]
   },
@@ -41,10 +41,10 @@
     }
    ],
    "source": [
-    "!git clone https://github.com/alexandermorgan/AMPACT.git\n",
-    "%cd /content/AMPACT/\n",
+    "!git clone https://github.com/jcdevaney/pyAMPACT.git\n",
+    "%cd /content/pyAMPACT/\n",
     "import pandas as pd\n",
-    "from script import Score\n",
+    "from symbolic import *\n",
     "print('-> Successfully imported Score class.')"
    ]
   },
@@ -79,7 +79,7 @@
    ],
    "source": [
     "piece = Score('https://raw.githubusercontent.com/alexandermorgan/TAVERN/master/Mozart/K179/Stripped/M179_00_02b_b.krn')\n",
-    "print(f'-> Successfully imported {piece.metadata[\"Title\"]} by {piece.metadata[\"Composer\"]}.\\n')"
+    "print(f'-> Successfully imported {piece.metadata[\"title\"]} by {piece.metadata[\"composer\"]}.\\n')"
    ]
   },
   {
@@ -134,7 +134,7 @@
    "id": "7ec5e794-3f3a-43e8-9770-3e8b0c3dda18",
    "metadata": {},
    "source": [
-    "Most of these are methods you can call on the Score object to get back a pandas dataframe (df) containing one type of data. For example, `.durations()` returns a df of the durations of all the notes and rests in the piece, as shown in the cell below. The columns are the names of the different parts in the piece according to the score encoding. We can see that there are four parts, shown as columns. Musical time serves as the index (the left-most numbers) for the rows. They are notated in music21 offsets, which indicate the number of quarter notes since the beginning of the piece. So 0 is the beginning of the piece and the second row of the table (at index 8.0) contains an event in each of the first two columns. The last two columns do not have new events at this moment in the piece so they get filled with placeholder NaNs. Since there are too many rows to show here, pandas shows the first five and the last five, separated by a row of ellipses."
+    "Most of these are methods you can call on the Score object to get back a pandas dataframe (df) containing one type of data. For example, `.durations()` returns a df of the durations of all the notes and rests in the piece, as shown in the cell below. The columns are the names of the different parts in the piece according to the score encoding. We can see that there are four parts, shown as columns. Musical time serves as the index (the left-most numbers) for the rows. They are notated in music21 offsets, which indicate the number of quarter notes since the beginning of the piece. So 0 is the beginning of the piece and the second row of the table (at index 8.0) contains an event in each of the first two columns. The last two columns do not have new events at this moment in the piece so they get filled with placeholder NaNs."
    ]
   },
   {
@@ -863,7 +863,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "46719e0c-8758-42a4-a849-3f3d91b559a7",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1215,33 +1217,8 @@
     }
    ],
    "source": [
+    "print(piece.sampled.__doc__)\n",
     "piece.sampled()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cbae6607-f8f5-44f3-bff5-5731d23e67a5",
-   "metadata": {},
-   "source": [
-    "As with any of the methods in this repository, you can read the documentation string for more details about this tool with the following command. Simply replace <sampled> with any of the other methods to get their documentation strings instead."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "9ef92bf5-cce3-4a57-a08e-16736ff8de39",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tSample the score according to bpm, and the desired observations per second, `obs`.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(piece.sampled.__doc__)"
    ]
   },
   {
@@ -1616,7 +1593,7 @@
    "id": "8cf68951-d01b-4a5e-9f04-5cfe7e2ce9c7",
    "metadata": {},
    "source": [
-    "Another python implementation of a matlab function that AMPACT offers is called `.nmats()`. Its dataframes correspond to the output of the `midi2nmat` run on each part in the score. Let's use the doc string of `.nmats()` to read more about it and then check out a sample."
+    "Another python implementation of a matlab function that pyAMPACT offers is called `.nmats()`. Its dataframes correspond to the output of the `midi2nmat` run on each part in the score. Let's use the doc string of `.nmats()` to read more about it and then check out a sample."
    ]
   },
   {
@@ -2045,7 +2022,7 @@
     }
    ],
    "source": [
-    "piece.nmats()['Part_2']"
+    "piece.nmats()['Part-2']"
    ]
   },
   {
@@ -2087,7 +2064,7 @@
    "id": "946ba516-45d8-4e0d-a166-2bbeef1a82cd",
    "metadata": {},
    "source": [
-    "If a .krn file has a **harm spine, we can similarly retrieve the analyzed harmonies with `piece.harmonies()`. We can also get the prevailing key analysis from the **harm spine (if there is one) with `piece.harmKeys()`. The default return type of functions, harmonies, and harmKeys is a numpy array, but let's use `output='series'` to keep this data as pandas series so that we can concatenate them into a table. This is a good opportunity to see how we can use some basic pandas methods to join our various tables on their musical time axis. We'll also forward-fill the observations, since the prevailing-key information is very sparse. This time let's use `.tail(10)` to look at the last 10 rows in the table."
+    "If a .krn file has a **harm spine, we can similarly retrieve the analyzed harmonies with `piece.harm()`. We can also get the prevailing key analysis from the **harm spine (if there is one) with `piece.harmKeys()`. The default return type of functions, harmonies, and harmKeys is a numpy array, but let's use `output='series'` to keep this data as pandas series so that we can concatenate them into a table. This is a good opportunity to see how we can use some basic pandas methods to join our various tables on their musical time axis. We'll also forward-fill the observations, since the prevailing-key information is very sparse. This time let's use `.tail(10)` to look at the last 10 rows in the table."
    ]
   },
   {
@@ -2216,7 +2193,7 @@
    "source": [
     "piece = Score('./test_files/cDataTest.krn')\n",
     "functions = piece.functions(output='series')\n",
-    "harmonies = piece.harmonies(output='series')\n",
+    "harmonies = piece.harm(output='series')\n",
     "keys = piece.harmKeys(output='series')\n",
     "df = pd.concat([keys, harmonies, functions], axis=1)\n",
     "df.columns = ['Key', 'Harmony', 'Function']\n",
@@ -2228,7 +2205,7 @@
    "id": "8a3cb36b-af86-45da-8bd4-5ec51b7cdd02",
    "metadata": {},
    "source": [
-    "AMPACT also supports reading analyses encoded in a **cdata spine in a .krn file where each record is stored as a json object (similar to a python dictionary). Let's look at the first five rows of this data for the same piece using the pandas `.head()` method."
+    "pyAMPACT also supports reading analyses encoded in a **cdata spine in a .krn file where each record is stored as a json object (similar to a python dictionary). Let's look at the first five rows of this data for the same piece using the pandas `.head()` method."
    ]
   },
   {
@@ -2471,18 +2448,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d2a7321e-f44a-404c-8c9a-eb23bca41117",
+   "metadata": {},
+   "source": [
+    "As with the `.functions()`, `.chords()`, `.harm()`, and `.harmKeys()` methods, `.cdata()` can also take `snap_to`, `filler`, and `output` arguments. See the doc string of any of these methods to learn more:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c0276f5-4bc7-496b-879c-a4c073be19e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(piece.functions.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6fabff91-a5cd-4159-a409-7f8f8b699a65",
    "metadata": {},
    "source": [
-    "As with the `.functions()`, `.harmonies()`, and `.harmKeys()` methods, `.cdata()` can also take a `bpm` argument if you want to sample it at regular time intervals according to a specific beats per minute value given as an integer. E.g., `piece.cdata(84)` would resample the time axis (i.e. the y-axis or rows of the df) based on this bpm.\n",
-    "\n",
     "<h2>But how do you get your data into the score in the first place?!</h2>\n",
     "\n",
-    "Say you have a score in symbolic notation and *seperately* a json file containing audio analysis of a performance of that piece. It can be very useful to insert that analysis directly into the score. AMPACT lets you import the data, align it with the score, and output it as a `.krn` score. That also means that AMPACT lets you **output** a valid kern file version of any of the file types that music21 **imports**. Since music21 imports a lot of file types, that means AMPACT is an almost universal X-to-kern converter. Let's look at this starting with importing a json file of analysis.\n",
+    "Say you have a score in symbolic notation and a *seperate* json file containing audio analysis of a performance of that piece. It can be very useful to insert that analysis directly into the score. pyAMPACT lets you import the data, align it with the score, and output it as a `kern` or `mei` score. That also means that pyAMPACT lets you **output** a valid kern or mei version of any of the file types that music21 **imports**. Since music21 imports a lot of file types, that means pyAMPACT is an almost universal X-to-kern and X-to-mei converter. Let's look at this starting with importing a json file of analysis.\n",
     "\n",
     "<h3>Import a json file</h3>\n",
     "\n",
-    "Provided your json file is in the right format, this is super easy, just run `.fromJSON(path_to_json_file)` passing in the path to the json file. For demonstration purposes, there's a small json file with a small sample of dummy data in the `test_files` directory called cdataCompact.json. The outermost keys should be in seconds with decimal places allowed (i.e. 123.5 for two minutes and three and a half seconds). We use these as the index values for the rows. The 2nd-level keys (of the nested objects) get used as the column names of the resultant table. Let's use an excerpt from a Mozart piece in the TAVERN repository for these next few examples, and see that json file as a table."
+    "Provided your json file is in the right format, run `fromJSON(path_to_json_file)` passing in the path to the json file. For demonstration purposes, there's a small json file with a small sample of dummy data in the `test_files` directory called cdataCompact.json. The outermost keys should be in seconds with decimal places allowed (i.e. 123.5 for two minutes and three and a half seconds). We use these as the index values for the rows. The 2nd-level keys (of the nested objects) get used as the column names of the resultant table. Let's use an excerpt from a Mozart piece in the TAVERN repository for these next few examples, and see that json file as a table."
    ]
   },
   {
@@ -2829,7 +2822,7 @@
    ],
    "source": [
     "piece = Score(score_path='https://raw.githubusercontent.com/alexandermorgan/TAVERN/master/Mozart/K353/Stripped/M353_04_01a_b.krn')\n",
-    "piece.fromJSON('./test_files/cdataCompact.json')"
+    "fromJSON('./test_files/cdataCompact.json')"
    ]
   },
   {
@@ -2859,7 +2852,7 @@
    "source": [
     "<h3>Export a file to kern with the json analysis included</h3>\n",
     "\n",
-    "That's cool, but what about inserting the json analysis data into the score? `.toKern` takes an optional second parameter called `data`. You pass it the path of the json file and AMPACT takes care of the rest."
+    "That's great, but what about inserting the json analysis data into the score? `.toKern` takes an optional second parameter called `data`. You pass it the path of the json file and pyAMPACT takes care of the rest."
    ]
   },
   {
@@ -2891,7 +2884,7 @@
    "id": "fcdbcf64-586f-438b-b357-ce19dabcd912",
    "metadata": {},
    "source": [
-    "There's a lot more coming with this repo and with AMPACT in general so stay tuned!"
+    "There's a lot more coming with this repo and with pyAMPACT in general so stay tuned!"
    ]
   }
  ],
