--- a/README.ipynb
+++ b/README.ipynb
@@ -43,7 +43,10 @@
    "source": [
     "!git clone https://github.com/jcdevaney/pyAMPACT.git\n",
     "%cd /content/pyAMPACT/\n",
-    "import pandas as pd\n",
+    "from IPython.utils import io\n",
+    "print('Updating pandas...')\n",
+    "with io.capture_output() as captured:\n",
+    "  !pip install --upgrade pandas\n",
     "from symbolic import *\n",
     "print('-> Successfully imported Score class.')"
    ]
