--- a/pyAMPACT_Quick_Ref_Colab.ipynb
+++ b/pyAMPACT_Quick_Ref_Colab.ipynb
@@ -397,7 +397,10 @@
    "source": [
     "!git clone https://github.com/jcdevaney/pyAMPACT.git\n",
     "%cd /content/pyAMPACT/\n",
-    "import pandas as pd\n",
+    "from IPython.utils import io\n",
+    "print('Updating pandas...')\n",
+    "with io.capture_output() as captured:\n",
+    "  !pip install --upgrade pandas\n",
     "from symbolic import *\n",
     "piece = Score('https://raw.githubusercontent.com/alexandermorgan/TAVERN/master/Mozart/K179/Stripped/M179_00_02b_b.krn')\n",
     "print(f'-> Successfully imported {piece.metadata[\"title\"]} by {piece.metadata[\"composer\"]}.\\n')\n",
