--- a/pyAMPACT_and_crim_intervals.ipynb
+++ b/pyAMPACT_and_crim_intervals.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "<h1 style='text-align: center;'>Combining pyAMPACT & CRIM Intervals</h1>\n",
     "<h2 style='text-align: center;'>Demo of using pyAMPACT audio analysis with CRIM Intervals Renaissance cadence analysis</h2>\n",
-    "<a href='https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/File_Converter.ipynb'><h2 style='text-align: center;'>Link to interactive colab file conversion tool</h2></a>"
+    "<a href='https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/pyAMPACT_and_crim_intervals.ipynb'><h2 style='text-align: center;'>Link to interactive colab file conversion tool</h2></a>"
    ]
   },
   {
@@ -17,11 +17,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git clone https://github.com/jcdevaney/pyAMPACT.git\n",
+    "!git clone https://github.com/jcdevaney/pyAMPACT.git\n",
     "%cd /content/pyAMPACT/\n",
-    "import pandas as pd\n",
+    "from IPython.utils import io\n",
+    "print('Updating pandas...')\n",
+    "with io.capture_output() as captured:\n",
+    "!pip install --upgrade pandas\n",
     "from symbolic import *\n",
-    "import crim-intervals"
+    "!pip install crim_intervals\n",
+    "import crim_intervals as crim"
    ]
   }
  ],
