package build start

--- a/pyAMPACT_Quick_Ref_Colab.ipynb
+++ b/pyAMPACT_Quick_Ref_Colab.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/pyAMPACT_Quick_Ref_Colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -15,8 +15,8 @@
       "id": "ef2a9751-f3d7-45b9-8e94-3822cf25528d",
       "metadata": {
         "editable": true,
-        "tags": [],
-        "id": "ef2a9751-f3d7-45b9-8e94-3822cf25528d"
+        "id": "ef2a9751-f3d7-45b9-8e94-3822cf25528d",
+        "tags": []
       },
       "source": [
         "<h1>pyAMPACT Quick Reference</h1>\n",
@@ -34,9 +34,9 @@
       "id": "e2f74498-c49a-49a5-b09e-60348639bb3e",
       "metadata": {
         "editable": true,
-        "tags": [],
         "id": "e2f74498-c49a-49a5-b09e-60348639bb3e",
-        "outputId": "1763d562-e451-4af1-f1b9-86ba5703ec24"
+        "outputId": "1763d562-e451-4af1-f1b9-86ba5703ec24",
+        "tags": []
       },
       "outputs": [
         {
@@ -408,6 +408,7 @@
         "print('Updating pandas...')\n",
         "with io.capture_output() as captured:\n",
         "  !pip install --upgrade pandas\n",
+        "  !pip install -i https://test.pypi.org/simple/ pyAMPACT==0.1.1\n",
         "from symbolic import *\n",
         "piece = Score('https://raw.githubusercontent.com/alexandermorgan/TAVERN/master/Mozart/K179/Stripped/M179_00_02b_b.krn')\n",
         "print(f'-> Successfully imported {piece.metadata[\"title\"]} by {piece.metadata[\"composer\"]}.\\n')\n",
@@ -420,8 +421,8 @@
       "id": "0c815b63-520a-467b-8420-d073070999b1",
       "metadata": {
         "editable": true,
-        "tags": [],
-        "id": "0c815b63-520a-467b-8420-d073070999b1"
+        "id": "0c815b63-520a-467b-8420-d073070999b1",
+        "tags": []
       },
       "source": [
         "For the nmat tables, remember that they're given as a dictionary of one table per part. The part names are the keys and the tables are the values. Let's look at the table for \"Part_1\" which in this case is the right hand of the piano part"
@@ -1124,9 +1125,9 @@
       "id": "401a7ec7-e8ca-4944-ab81-8b9083cae543",
       "metadata": {
         "editable": true,
-        "tags": [],
         "id": "401a7ec7-e8ca-4944-ab81-8b9083cae543",
-        "outputId": "b0a1a72c-9ca1-45fa-fc2e-b74d9949cc01"
+        "outputId": "b0a1a72c-9ca1-45fa-fc2e-b74d9949cc01",
+        "tags": []
       },
       "outputs": [
         {
@@ -1257,6 +1258,10 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -1272,11 +1277,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.11"
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "version": "3.11.6"
     }
   },
   "nbformat": 4,
