Fix path navigation on importing

--- a/pyAMPACT_and_crim_intervals.ipynb
+++ b/pyAMPACT_and_crim_intervals.ipynb
@@ -21,11 +21,13 @@
     "!git clone https://github.com/HCDigitalScholarship/intervals.git\n",
     "%cd /content/intervals/\n",
     "from IPython.utils import io\n",
-    "print('Updating pandas...')\n",
+    "print('Importing libraries...')\n",
     "with io.capture_output() as captured:\n",
     "    !pip install --upgrade pandas\n",
+    "    !pip install -r requirements.txt\n",
     "    import crim_intervals as crim\n",
     "\n",
+    "%cd ..\n",
     "!git clone https://github.com/jcdevaney/pyAMPACT.git\n",
     "%cd /content/pyAMPACT/\n",
     "from pyampact import *"
