Use colab button links consistantly in notebooks

--- a/Example_Script.ipynb
+++ b/Example_Script.ipynb
@@ -2,13 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c65f8188-8bf4-4606-a8b7-883d592f58a2",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/Example_Script.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4c5ed9bd-dd5b-406f-89a6-f40cf7bbce41",
    "metadata": {},
    "source": [
-    "<h1 style='text-align: center'>Example Script</h1>\n",
-    "<a href='https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/Example_Script.ipynb'>\n",
-    "    <h2 style='text-align: center'>Link to interactive colab notebook</h2>\n",
-    "</a>"
+    "<h1 style='text-align: center'>Example Script</h1>"
    ]
   },
   {
