--- a/File_Converter.ipynb
+++ b/File_Converter.ipynb
@@ -19,8 +19,7 @@
    },
    "source": [
     "<h1 style='text-align: center;'>File Converter</h1>\n",
-    "<h2 style='text-align: center;'>Convert a score in symbolic notation to an MEI or kern score</h2>\n",
-    "<a href='https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/File_Converter.ipynb'><h2 style='text-align: center;'>Link to interactive colab version of this notebook</h2></a>"
+    "<h2 style='text-align: center;'>Convert a score in symbolic notation to an MEI or kern score</h2>"
    ]
   },
   {
