--- a/README.ipynb
+++ b/README.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "098a2afc-84b7-4969-99ca-29479cef7d4d",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/README.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "19878396-425f-4724-a0b3-85965596cf40",
    "metadata": {
     "editable": true,
@@ -13,7 +21,6 @@
    "source": [
     "# pyAMPACT Repository Usage Guide\n",
     "\n",
-    "An interactive [colab version](https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/README.ipynb) of this notebook is also available.\n",
     "All examples below require the following import, so be sure to run the following cell:"
    ]
   },
