--- a/pyAMPACT_and_crim_intervals.ipynb
+++ b/pyAMPACT_and_crim_intervals.ipynb
@@ -2,12 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "264db15b-dc7b-4bcc-8d94-bb75c9314a7c",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/pyAMPACT_and_crim_intervals.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "73f2e76a-6c49-4510-ae5b-349e44aa5ba6",
    "metadata": {},
    "source": [
     "<h1 style='text-align: center;'>Combining pyAMPACT & CRIM Intervals</h1>\n",
     "<h2 style='text-align: center;'>Demo of using pyAMPACT audio analysis with CRIM Intervals Renaissance cadence analysis</h2>\n",
-    "<a href='https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/pyAMPACT_and_crim_intervals.ipynb'><h2 style='text-align: center;'>Link to interactive colab version of this notebook</h2></a>\n",
     "<h2>Import the tools:</h2>"
    ]
   },
