--- a/pyAMPACT_Quick_Ref_Colab.ipynb
+++ b/pyAMPACT_Quick_Ref_Colab.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "<h1>pyAMPACT Quick Reference</h1>\n",
     "\n",
-    "This notebook gives a quick demonstration of how to run some of pyAMPACT's primary functions and save the generated tables to csv files. Feel free to use this notebook as a way to create csv files of the results and save them locally. It's meant to be used on colab [here](https://colab.research.google.com/github/jcdevaney/pyAMPACT/blob/master/pyAMPACT_Quick_Ref_Colab.ipynb).\n",
+    "This notebook gives a quick demonstration of how to run some of pyAMPACT's primary functions and save the generated tables to csv files. Feel free to use the colab version of this notebook (link above) as a way to create csv files of the results and save them locally.\n",
     "\n",
     "<h2>Import a the repo and create a Score object</h2>\n",
     "\n",
